--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "WATCHPACK_POLLING=true react-scripts start"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "primereact": "^10.9.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-papaparse": "^4.4.0",
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
