--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,3 +29,7 @@ uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
+pandas==2.2.3
+neurokit2==0.2.10
+scipy==1.15.2
+numpy==2.2.3
