--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "start": "WATCHPACK_POLLING=true react-scripts start"
   },
   "dependencies": {
+    "@img-comparison-slider/react": "^8.0.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "primereact": "^10.9.2",
