--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@img-comparison-slider/react": "^8.0.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "chartjs-plugin-zoom": "^2.2.0",
     "primereact": "^10.9.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-papaparse": "^4.4.0",
     "react-router-dom": "^7.2.0"
   },
