--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-papaparse": "^4.4.0",
     "react-router-dom": "^7.2.0",
     "react-syntax-highlighter": "^15.6.1"
