--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "date-fns": "^4.1.0",
+    "fft-js": "^0.0.12",
     "primereact": "^10.9.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
