--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
     "start": "WATCHPACK_POLLING=true react-scripts start"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.8",
     "@img-comparison-slider/react": "^8.0.2",
+    "@mantine/core": "^7.17.7",
+    "@mantine/hooks": "^7.17.7",
     "@xyflow/react": "^12.5.5",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -20,6 +23,7 @@
     "chartjs-plugin-zoom": "^2.2.0",
     "date-fns": "^4.1.0",
     "fft-js": "^0.0.12",
+    "framer-motion": "^12.9.2",
     "primereact": "^10.9.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -38,10 +42,13 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   }
 }
