--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-circular-menu": "^2.4.18",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-papaparse": "^4.4.0",
