--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "fft-js": "^0.0.12",
     "framer-motion": "^12.9.2",
     "primereact": "^10.9.2",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
