--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "WATCHPACK_POLLING=true react-scripts start"
+    "start": "WATCHPACK_POLLING=true react-scripts start",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@heroui/react": "^2.7.8",
@@ -24,6 +26,7 @@
     "date-fns": "^4.1.0",
     "fft-js": "^0.0.12",
     "framer-motion": "^12.9.2",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "primereact": "^10.9.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
@@ -42,15 +45,22 @@
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.21.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^30.0.0-beta.3",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "jest": "^29.7.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
