--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,6 @@
     "date-fns": "^4.1.0",
     "fft-js": "^0.0.12",
     "framer-motion": "^12.9.2",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
     "primereact": "^10.9.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
@@ -61,6 +60,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
