--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,12 @@
 FROM python:3.12.9-slim
 
-WORKDIR /code
+WORKDIR /app
 
-COPY ./app /code/app
-
-COPY requirements.txt /code/
+COPY ./app /app/app
+COPY requirements.txt /app/
 
 RUN pip install -r requirements.txt
 
-EXPOSE 8000
+EXPOSE ${VITE_BACKEND_PORT:-8000}
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${VITE_BACKEND_PORT:-8000}"]
