--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,9 @@ services:
       - ./backend:/app
     ports:
       - "${VITE_BACKEND_PORT}:${VITE_BACKEND_PORT}"
-    command: sh -c "uvicorn app.main:app --host 0.0.0.0 --reload --port ${VITE_BACKEND_PORT}"
+    env_file:
+      - .env.prod
+    command: sh -c "uvicorn app.main:app --host 0.0.0.0 --port ${VITE_BACKEND_PORT}"
 
   frontend:
     build:
@@ -19,4 +21,6 @@ services:
     environment:
       - WATCHPACK_POLLING=true
       - VITE_BACKEND_PORT=${VITE_BACKEND_PORT}
-    command: sh -c "npm run dev -- --port ${FRONTEND_PORT}"
+    env_file:
+      - .env.prod
+    command: sh -c "npm run start -- --port ${FRONTEND_PORT}"
