[Docker] Python parameter fix

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,8 @@ services:
       context: ./backend
     volumes:
       - ./backend:/app
+    env_file:
+      - .env.dev
     ports:
       - "${VITE_BACKEND_PORT}:${VITE_BACKEND_PORT}"
     command: sh -c "uvicorn app.main:app --host 0.0.0.0 --reload --port ${VITE_BACKEND_PORT}"
@@ -19,5 +21,7 @@ services:
       - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     environment:
       - WATCHPACK_POLLING=true
-      - VITE_BACKEND_PORT=${VITE_BACKEND_PORT}
+      - VITE_BACKEND_PORT=${VITE_BACKEND_PORT} # This could be parsed with env_file as backend service does
+    #env_file:
+    # -.env.dev (wherever VITE_BACKEND_PORT is defined)
     command: sh -c "npm run dev -- --port ${FRONTEND_PORT}"
