--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,8 +4,8 @@ services:
       context: ./backend
     environment:
       - PYTHON_ENABLED=${PYTHON_ENABLED:-false}
-    ports:
-      - "${VITE_BACKEND_PORT}:${VITE_BACKEND_PORT}"
+    expose:
+      - "${VITE_BACKEND_PORT}"
     command: sh -c "uvicorn app.main:app --host 0.0.0.0 --port ${VITE_BACKEND_PORT}"
 
   frontend:
@@ -14,5 +14,15 @@ services:
       dockerfile: Dockerfile.prod
       args:
         VITE_BACKEND_PORT: ${VITE_BACKEND_PORT}
+    expose:
+      - "80"
+
+  nginx:
+    image: nginx:latest
     ports:
       - "${FRONTEND_PORT}:80"
+    depends_on:
+      - frontend
+      - backend
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
